    Enable try to complete is unstable at the moment. It's recommended to set enable_try_to_complete=0

--=============================( SLFTP v1.5.6 )===================================-
 ** NOTE: FROM NOW ON YOU HAVE TO USE - Delphi 10.2.3 Tokyo or newer - ON WINDOWS! **
  ** NOTE: FROM NOW ON YOU HAVE TO USE UNRELEASED - FPC 3.2 or newer - ON LINUX! **
  
    {^} Addpre command does not need to contain the section anymore (it was ignored anyway)
    {#} Addpre event received after a NEWDIR will now correctly update kb with the pretime and recalc routes
    {+} Blowfish CBC support (#124)
    {+} Box Office Mojo support
    {+} New HTTP Library (up to 50% faster) with Socks5 support
    {+} News System to store important messages to encrypted file. (#173, #164, #198)
    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {+} Wildcard/Regex (Masks) support for midnight sections
    {+} New !affils command.
    {+} Show a message when 0 byte file was detected on startup (#189)
    {+} !status and !uptime shows if you use 32/64-bit version of slftp and used compiler version
    {+} !lastlog command to show last log entries. (#160)
    {+} Avoid double race of release in different sections (#116)
    {+} Show a warn message if important files not found on startup
    {+} Show PID & actual memory usage in !status command (atm linux only!) (#170)
    {+} !fetchuser cmd to fetch some information about site settings + basic recommendation (#51)
    {+} Support for wildcards in !batch (#222)                                  --- some more work + testing needed ---
    {+} Completely new SQLite engine
    {+} Completely new MySQL/MariaDB engine
    {+} !setdownoutofspace command to configure set_down_on_out_of_space value per site (#158)
    {+} Detection for RaidenFTPD sites added (#231)
    {#} Fixed !routelock so it doesn't remove normal route when removing lock